force-app/main/default/objects/Contact/fields/isStripeUser__c.field-meta.xml
<CustomField>
    <fullName>isStripeUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if ticked will replicate the user to Stripe</description>
    <label>Is a Stripe Customer</label>
    <type>Checkbox</type>
</CustomField>