force-app/main/default/objects/Contact/fields/StripeURL__c.field-meta.xml
<CustomField>
    <fullName>StripeURL__c</fullName>
    <formula>&apos;https://dashboard.stripe.com/test/customers/&apos; +  Stripe_UID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>StripeURL</label>
    <type>Text</type>
</CustomField>